external_gateway/demo_01/manifests/api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: infra
  name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: whereami
        image: us-docker.pkg.dev/google-samples/containers/gke/whereami:v1.2.11
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: infra
  name: api-svc
spec:
  selector:
    app: api
  ports:
  - port: 8080
    targetPort: 8080
