external_gateway/demo_01/manifests/gateway.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: https-ext-gtw
  namespace: infra
  annotations:
    networking.gke.io/certmap: gke-poc-map
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
