external_gateway/demo_01/manifests/routes.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: store-external
  namespace: infra
spec:
  parentRefs:
  - kind: Gateway
    name: https-ext-gtw
  hostnames:
  - "store.example.com"
  rules:
  - backendRefs:
    - name: web-v1-svc
      port: 8080
  - matches:
    - headers:
      - name: env
        value: canary
    backendRefs:
    - name: web-v2-svc
      port: 8080
  - matches:
    - path:
        value: /api
    backendRefs:
    - name: api-svc
      port: 8080
